--- a/2022-2023/Machine Learning/references.bib
+++ b/2022-2023/Machine Learning/references.bib
@@ -13,3 +13,96 @@
   year={2014},
   publisher={Cambridge university press}
 }
+
+@article{harrison1978hedonic,
+  title={Hedonic housing prices and the demand for clean air},
+  author={Harrison Jr, David and Rubinfeld, Daniel L},
+  journal={Journal of environmental economics and management},
+  volume={5},
+  number={1},
+  pages={81--102},
+  year={1978},
+  publisher={Elsevier}
+}
+
+@misc{SklearnDatasetsLoad,
+  title = {Sklearn.Datasets.Load\_boston},
+  author = {scikit-learn},
+  journal = {scikit-learn},
+  howpublished = {https://scikit-learn/stable/modules/generated/sklearn.datasets.load\_boston.html},
+  langid = {english},
+  file = {/home/jaymorgan/Zotero/storage/JTN2423E/sklearn.datasets.load_boston.html},
+  year = {2022}
+}
+
+@misc{carlisleRacistDataDestruction2020,
+  title = {Racist Data Destruction?},
+  author = {Carlisle, M.},
+  year = {2020},
+  month = jan,
+  journal = {Medium},
+  abstract = {a Boston housing dataset controversy},
+  langid = {english}
+}
+
+@online{iris_pict,
+ author  = "Diliff",
+ title   = "Iris germanica (Purple bearded Iris), Wakehurst Place, UK - Diliff.jpg",
+ year    = "2014",
+ urlseen = "2022-08-11",
+ url     = "https://upload.wikimedia.org/wikipedia/commons/4/49/Iris_germanica_%28Purple_bearded_Iris%29%2C_Wakehurst_Place%2C_UK_-_Diliff.jpg",
+ note    = "File: \ttfamily{iris.jpg}",
+}
+
+@article{fisher1936use,
+  title={The use of multiple measurements in taxonomic problems},
+  author={Fisher, Ronald A},
+  journal={Annals of eugenics},
+  volume={7},
+  number={2},
+  pages={179--188},
+  year={1936},
+  publisher={Wiley Online Library}
+}
+
+@online{flower_pict,
+ author  = "Eric Guinther",
+ title   = "Image of a primrose willowherb Ludwigia octovalvis (family Onagraceae), flower showing petals and sepals",
+ year    = "2005",
+ urlseen = "2022-08-11",
+ url     = "https://upload.wikimedia.org/wikipedia/commons/4/49/Iris_germanica_%28Purple_bearded_Iris%29%2C_Wakehurst_Place%2C_UK_-_Diliff.jpg",
+ note    = "File: \ttfamily{Petal-sepal.jpg}",
+}
+
+@article{lecun1998gradient,
+  title={Gradient-based learning applied to document recognition},
+  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
+  journal={Proceedings of the IEEE},
+  volume={86},
+  number={11},
+  pages={2278--2324},
+  year={1998},
+  publisher={Ieee}
+}
+
+@InProceedings{maas-EtAl:2011:ACL-HLT2011,
+  author    = {Maas, Andrew L.  and  Daly, Raymond E.  and  Pham, Peter T.  and  Huang, Dan  and  Ng, Andrew Y.  and  Potts, Christopher},
+  title     = {Learning Word Vectors for Sentiment Analysis},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {June},
+  year      = {2011},
+  address   = {Portland, Oregon, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {142--150},
+  url       = {http://www.aclweb.org/anthology/P11-1015}
+}
+
+@inproceedings{metsis2006spam,
+  title={Spam filtering with naive bayes-which naive bayes?},
+  author={Metsis, Vangelis and Androutsopoulos, Ion and Paliouras, Georgios},
+  booktitle={CEAS},
+  volume={17},
+  pages={28--69},
+  year={2006},
+  organization={Mountain View, CA}
+}
